fix: Animation "super_kick" renamed to "super_kick_shell" to fit pattern, animation "super_sping_jump" renamed to "super_spin_jump", animations "death" and "grow_up" moved to the root Mario animations folder.

--- a/settings/project.json
+++ b/settings/project.json
@@ -15,12 +15,12 @@
   "design-resolution-height": 240,
   "fit-width": false,
   "fit-height": true,
-  "use-project-simulator-setting": false,
-  "simulator-orientation": false,
+  "use-project-simulator-setting": true,
+  "simulator-orientation": true,
   "use-customize-simulator": true,
   "simulator-resolution": {
-    "height": 640,
-    "width": 960
+    "height": 240,
+    "width": 320
   },
   "clear-simulator-cache": true,
   "facebook": {
