feat: Mushrooms implemented.

--- a/settings/project.json
+++ b/settings/project.json
@@ -24,6 +24,8 @@
     [
       false,
       true,
+      true,
+      null,
       true
     ],
     [
@@ -37,7 +39,7 @@
     [
       false,
       true,
-      false,
+      true,
       true,
       true,
       true,
